# Module-Loader

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
example/: CMakeLists.txt  main.cpp  shared_library.cpp
include/module_loader/: algorithm.hpp  base.hpp  bases.hpp  counting_directory_scanning_shared_library_factory_observer.hpp  counting_resolver_observer.hpp  counting_shared_library_offer_factory_observer.hpp  dag_resolver.hpp  directory_entry_filter.hpp  directory_scanning_shared_library_factory.hpp  directory_scanning_shared_library_factory_observer.hpp  error.hpp  exception.hpp  function_offer.hpp  in_place_object.hpp  in_place_offer.hpp  inplace_object.hpp  inplace_offer.hpp  not_a_dag_error.hpp  object.hpp  object_base.hpp  object_decorator.hpp  offer.hpp  offer_base.hpp  offer_decorator.hpp  offer_factory.hpp  offer_factory_composite.hpp  optional.hpp  queue_offer_factory.hpp  queue_shared_library_factory.hpp  reference_object.hpp  reference_offer.hpp  request.hpp  resolver_error.hpp  resolver_observer.hpp  shared_library_directory_entry_filter.hpp  shared_library_factory.hpp  shared_library_offer_factory.hpp  shared_library_offer_factory_observer.hpp  type_name.hpp  type_traits.hpp  (+4 more)
src/: CMakeLists.txt
src/module_loader/: CMakeLists.txt  counting_directory_scanning_shared_library_factory_observer.cpp  counting_resolver_observer.cpp  counting_shared_library_offer_factory_observer.cpp  dag_resolver.cpp  directory_entry_filter.cpp  directory_scanning_shared_library_factory.cpp  directory_scanning_shared_library_factory_observer.cpp  exception.cpp  not_a_dag_error.cpp  object.cpp  offer.cpp  offer_factory.cpp  offer_factory_composite.cpp  queue_offer_factory.cpp  queue_shared_library_factory.cpp  request.cpp  resolver_observer.cpp  shared_library_directory_entry_filter.cpp  shared_library_factory.cpp  shared_library_offer_factory.cpp  shared_library_offer_factory_observer.cpp  type_name.cpp  unfulfilled_error.cpp  void_object.cpp  whereami.cpp
src/module_loader/test/: CMakeLists.txt  bases.cpp  dag_resolver.cpp  directory_scanning_shared_library_factory.cpp  exception.cpp  function_offer.cpp  in_place_object.cpp  in_place_offer.cpp  inplace_object.cpp  inplace_offer.cpp  offer_factory_composite.cpp  queue_offer_factory.cpp  queue_shared_library_factory.cpp  reference_object.cpp  reference_offer.cpp  shared_library_directory_entry_filter.cpp  shared_library_offer_factory.cpp  type_name.cpp  type_traits.cpp  unfulfilled_error.cpp  void_object.cpp
src/module_loader/test/shared_library_offer_factory/: CMakeLists.txt  fulfill_throws.cpp  multiple.cpp  none.cpp  success.cpp  throws.cpp
