add_library(module_loader SHARED
	counting_directory_scanning_shared_library_factory_observer.cpp
	counting_resolver_observer.cpp
	counting_shared_library_offer_factory_observer.cpp
	dag_resolver.cpp
	directory_entry_filter.cpp
	directory_scanning_shared_library_factory.cpp
	directory_scanning_shared_library_factory_observer.cpp
	exception.cpp
	not_a_dag_error.cpp
	object.cpp
	offer.cpp
	offer_factory.cpp
	offer_factory_composite.cpp
	queue_offer_factory.cpp
	queue_shared_library_factory.cpp
	request.cpp
	resolver_observer.cpp
	shared_library_directory_entry_filter.cpp
	shared_library_factory.cpp
	shared_library_offer_factory.cpp
	shared_library_offer_factory_observer.cpp
	type_name.cpp
	unfulfilled_error.cpp
	void_object.cpp
	whereami.cpp
)
target_link_libraries(module_loader ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
add_subdirectory(test)
