add_library(shared_library_offer_factory_fulfill_throws SHARED fulfill_throws.cpp)
target_link_libraries(shared_library_offer_factory_fulfill_throws module_loader)
add_library(shared_library_offer_factory_multiple SHARED multiple.cpp)
target_link_libraries(shared_library_offer_factory_multiple module_loader)
add_library(shared_library_offer_factory_none SHARED none.cpp)
target_link_libraries(shared_library_offer_factory_none module_loader)
add_library(shared_library_offer_factory_success SHARED success.cpp)
target_link_libraries(shared_library_offer_factory_success module_loader)
add_library(shared_library_offer_factory_throws SHARED throws.cpp)
target_link_libraries(shared_library_offer_factory_throws module_loader)
